<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:orientation="vertical"
    tools:context=".InventoryActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/inventory_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

   <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inventory_storeItems"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/inventory_listItems"
        android:layout_width="match_parent"
        android:layout_height="195dp"
        android:layout_marginBottom="10dp" >
    </ListView>

    <SeekBar
        android:id="@+id/seekBarInventory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inventory_amount"
        android:textSize="12sp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/buttonAddItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/inventory_addItem" />
    
     <Button
        android:id="@+id/buttonRemoveItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/inventory_removeItem" />
     
      <Button
        android:id="@+id/buttonBuyCoins"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/inventory_buyWithCoins" />
      
       <Button
        android:id="@+id/buttonPurchaseIAP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/inventory_purchaseIAP" />

</LinearLayout>