<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:orientation="vertical"
    tools:context=".MatchInfoActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/match_stats"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" >

            <TextView
                android:id="@+id/matchinfo_player1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginRight="20dp"
                android:text="@string/match_player1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#0000ff" />

            <TextView
                android:id="@+id/matchinfo_player2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/match_player2"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#8b0000" />
        </RelativeLayout>

        <TextView
            android:id="@+id/matchinfo_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:text="@string/match_movenum"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:id="@+id/matchinfo_layout_myTurn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/matchinfo_select_items"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/match_selectItems" />

            <Button
                android:id="@+id/matchinfo_send_move"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/match_sendMove" />

            <Button
                android:id="@+id/matchinfo_resign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/match_resign" />

            <Button
                android:id="@+id/matchinfo_accept"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/match_accept" />

            <Button
                android:id="@+id/matchinfo_reject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/match_reject" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/matchinfo_layout_theirTurn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/match_sendNudge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/match_sendNudge" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/matchinfo_chat_message"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="fill_horizontal"
                android:hint="@string/match_chatMessage"
                android:inputType="textShortMessage"
                android:scrollHorizontally="true"
                android:textAppearance="?android:attr/textAppearanceMedium" >
            </EditText>

            <Button
                android:id="@+id/matchinfo_sendchat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/match_sendChat" />

            <LinearLayout
                android:id="@+id/matchinfo_layout_chat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>