<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:orientation="vertical"
    tools:context=".TrySignupSigninActivity" >

    <TextView
        android:id="@+id/textSigninOrSignup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        android:gravity="center"
        android:text="@string/signup_signin"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <EditText android:id="@+id/editUsernameOrEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_or_email" 
        android:autoText="false"
        android:capitalize="none"
        android:layout_marginBottom="40dp"
        android:inputType="textEmailAddress" />
    
    <Button 
        android:id="@+id/btnGo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_"
        android:layout_marginBottom="40dp"
        />    
    
    <Button 
        android:id="@+id/btnFacebookSignin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/facebook_signin"
        android:layout_marginBottom="40dp"
        />
</LinearLayout>